src/test/ui/suggestions/pub-ident-struct.stderr
error: missing `struct` for struct definition
  --> $DIR/pub-ident-struct.rs:11:4
   |
11 | pub S {
   |    ^
help: add `struct` here to parse `S` as a public struct
   |
11 | pub struct S {
   |     ^^^^^^

error: aborting due to previous error

